<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HangmanActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:adjustViewBounds="true"
        android:contentDescription="@string/imageFailure"
        android:scaleType="fitCenter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hangman_00" />

    <LinearLayout
        android:id="@+id/row1"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/A"
            style="@style/AppTheme"
           />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/B"
            app:layout_constraintStart_toEndOf="@+id/buttonA"
            style="@style/AppTheme"
             />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/C"
            app:layout_constraintStart_toEndOf="@+id/buttonB"
            style="@style/AppTheme"
             />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/D"
            app:layout_constraintStart_toEndOf="@+id/buttonC"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            style="@style/AppTheme"
            />

        <Button
            android:id="@+id/buttonE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/E"
            app:layout_constraintStart_toEndOf="@+id/buttonD"
            style="@style/AppTheme"
             />

        <Button
            android:id="@+id/buttonF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/F"
            app:layout_constraintStart_toEndOf="@+id/buttonE"
            style="@style/AppTheme"
             />

        <Button
            android:id="@+id/buttonG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/G"
            app:layout_constraintStart_toEndOf="@+id/buttonF"
            style="@style/AppTheme"
             />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/row2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row1">

    <Button
        android:id="@+id/buttonH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="50dp"
        android:minHeight="28dp"
        android:text="@string/H"
        style="@style/AppTheme"
        />
        <Button
            android:id="@+id/buttonI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/I"
            app:layout_constraintStart_toEndOf="@+id/buttonH"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonJ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/J"
            app:layout_constraintStart_toEndOf="@+id/buttonI"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/K"
            app:layout_constraintStart_toEndOf="@+id/buttonK"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/L"
            app:layout_constraintStart_toEndOf="@+id/buttonK"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/M"
            app:layout_constraintStart_toEndOf="@+id/buttonL"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/N"
            app:layout_constraintStart_toEndOf="@+id/buttonM"
            style="@style/AppTheme"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row2">

        <Button
            android:id="@+id/buttonO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/O"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/P"
            app:layout_constraintStart_toEndOf="@+id/buttonO"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/Q"
            app:layout_constraintStart_toEndOf="@+id/buttonP"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/R"
            app:layout_constraintStart_toEndOf="@+id/buttonQ"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/S"
            app:layout_constraintStart_toEndOf="@+id/buttonR"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/T"
            app:layout_constraintStart_toEndOf="@+id/buttonS"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/U"
            app:layout_constraintStart_toEndOf="@+id/buttonT"
            style="@style/AppTheme"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row4"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row3">

        <Button
            android:id="@+id/buttonV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/V"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/W"
            app:layout_constraintStart_toEndOf="@+id/buttonV"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/X"
            app:layout_constraintStart_toEndOf="@+id/buttonW"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/Y"
            app:layout_constraintStart_toEndOf="@+id/buttonX"
            style="@style/AppTheme"
            />
        <Button
            android:id="@+id/buttonZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="50dp"
            android:minHeight="28dp"
            android:text="@string/Z"
            app:layout_constraintStart_toEndOf="@+id/buttonY"
            style="@style/AppTheme"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/guessableWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/row1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonHangmanHintPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row4"
        android:tag="@string/hint"
        android:text="@string/hint" />



    <TextView
        android:id="@+id/hangmanWinLoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/win"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>