<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicTacToeSettingsActivity">

    <TextView
        android:id="@+id/tvTicTacToe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/GameMode_TicTacToe"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTicTacToe">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/tvGameMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GameMode"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/tbMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/GameModePvP"
                android:textOn="@string/GameModePvAI" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="40dp">

            <TextView
                android:id="@+id/tvAIDifficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AIDifficulty"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/sbAIDifficulty"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvStartingSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TTTStartingSymbol"
                android:textSize="18sp" />

            <ToggleButton
                android:id="@+id/tbSymbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textOff="@string/TTT_X"
                android:textOn="@string/TTT_O" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>